--- a/index.css
+++ b/index.css
@@ -21,13 +21,15 @@ li>ul {
         padding: 0px 8px 0px 8px;
         align-items: center;
         height: 63px;
-        background-image: url(astronomy-1867616_1920.jpg);
+        background-image: url(./astronomy-1867616_1920.jpg);
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     .divNavContainer {
-        background-color: yellow;
+        background-image:url(./astronomy-1867616_1920.jpg);
+        background-repeat: no-repeat;
+        background-attachment: cover;
         position: absolute;
         left: 0px;
         top: 63px;
