--- a/index.css
+++ b/index.css
@@ -13,18 +13,19 @@ hr {
   margin: 0;
 }
 
-ul>li{
-    color:#aaba0c;
-    font-style: oblique;
+ul > li {
+  color: #aaba0c;
+  font-style: oblique;
 }
 .divNavContainer > ul,
 li > ul {
   list-style: none;
-  margin: 1vw 0;
+  margin: 1vw;
 }
 
 .divNavContainer > ul {
   padding: 0px;
+  margin: 1vw 0;
 }
 li > button {
   background: transparent;
@@ -49,15 +50,14 @@ li > button {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
-    position: absolute;
+    position: fixed;
     top: 63px;
-    max-width: 58vw;
-    min-height:50vw;
-    display: none;
-    left:0;
-    right:0
-
+    width: 58vw;
+    height: 100%;
+    left:-58vw;
+    transition: 1s;
   }
+
 
   .dropDownLi {
     display: flex;
