--- a/index.css
+++ b/index.css
@@ -50,7 +50,7 @@ li > button {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
-    position: fixed;
+    position: absolute;
     top: 63px;
     width: 58vw;
     height: 100%;
