--- a/index.css
+++ b/index.css
@@ -43,6 +43,7 @@ li > button {
     background-image: url(./astronomy-1867616_1920.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    position: fixed;
   }
 
   .divNavContainer {
@@ -50,7 +51,7 @@ li > button {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
-    position: absolute;
+    position: fixed;
     top: 63px;
     width: 58vw;
     height: 100%;
