--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@ li > button {
     background-image: url(./astronomy-1867616_1920.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    position: fixed;
+    position: sticky;
   }
 
   .divNavContainer {
@@ -51,12 +51,13 @@ li > button {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
-    position: fixed;
+    position:absolute;
     top: 63px;
     width: 58vw;
-    height: 100%;
+    min-height: 90vh;
     left:-58vw;
     transition: 1s;
+    overflow: scroll;
   }
 
 
