--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ li > button {
 }
 @media (max-width: 575.98px) {
   nav {
+    top:0;
     display: flex;
     justify-content: space-between;
     padding: 0px 8px 0px 8px;
