--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ li > button {
     position:fixed;
     top: 63px;
     width: 58vw;
-    height: 100vh;
+    height: 170vw;
     left:-58vw;
     transition: 1s;
     overflow-y: scroll;
