--- a/index.css
+++ b/index.css
@@ -8,7 +8,8 @@ body {
     justify-content: space-around;
     align-items: center;
     height: 63px;
-    background-image: url(./img/astronomy-1867616_1920.jpg);
+    background-image: url(./img/sky-828648.jpg);
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: fixed;
@@ -16,7 +17,7 @@ body {
   }
 
   .divNavContainer {
-    background-image: url(./img/astronomy-1867616_1920.jpg);
+    background-image: url(./img/sky-828648.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
@@ -88,14 +89,15 @@ body {
     justify-content: space-around;
     align-items: center;
     height: 63px;
-    background-image: url(./img/astronomy-1867616_1920.jpg);
+    background-image: url(./img/sky-828648.jpg);
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: fixed;
     width: 100%;
   }
   .divNavContainer {
-    background-image: url(./img/astronomy-1867616_1920.jpg);
+    background-image: url(./img/sky-828648.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
@@ -171,7 +173,8 @@ body {
     justify-content: space-around;
     align-items: center;
     height: 80px;
-    background-image: url(./img/astronomy-1867616_1920.jpg);
+    background-image: url(./img/sky-828648.jpg);
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: fixed;
@@ -179,7 +182,7 @@ body {
   }
 
   .divNavContainer {
-    background-image: url(./img/astronomy-1867616_1920.jpg);
+    background-image: url(./img/sky-828648.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
@@ -194,7 +197,7 @@ body {
   .divNavContainer > ul,
   li > ul {
     list-style: none;
-    margin: 1vw;
+    margin: 0.4vw;
     padding: 0;
   }
 
@@ -229,7 +232,7 @@ body {
     background: transparent;
     border: none !important;
     outline: none;
-    padding: 1vw 0 1vw 0;
+    padding: 0.3vw 0 0.3vw 0;
     pointer-events: none;
   }
   ul > li {
@@ -248,9 +251,258 @@ body {
     color: #aaba0c;
   }
 }
+@media (min-width: 992px) and (max-width: 1199.8px){
+  nav {
+    top: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 80px;
+    background-image: url(./img/sky-828648.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: fixed;
+    width: 100%;
+  }
 
-@media (min-width: 992px) and (max-width: 1199.98px) {
+  .divNavContainer {
+    background-image: url(./img/sky-828648.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top: 80px;
+    width: 24vw;
+    left:0;
+    height: 88vw;
+    overflow-y:auto;
+    text-align: center;
+  }
+  .divNavContainer > ul,
+  li > ul {
+    list-style: none;
+    margin: 0.4vw;
+    padding: 0;
+  }
+
+  .divNavContainer > ul {
+    padding: 0px;
+    margin: 1vw 0;
+  }
+
+  .hamburguer > img {
+    display: none;
+  }
+  .logo > img {
+    width: 419px;
+    height: 51px;
+    padding-top: 7px;
+  }
+  .chat > img {
+    display: none;
+  }
+  .dropDownLi {
+    display: flex;
+    flex-direction: column;
+  }
+  .dropDownLi > ul {
+    display: block;
+  }
+  .oro:hover {
+    color: rgb(206, 149, 4);
+  }
+
+  li > button{
+    background: transparent;
+    border: none !important;
+    outline: none;
+    padding: 0.3vw 0 0.3vw 0;
+    pointer-events: none;
+  }
+  ul > li {
+    font-style: oblique;
+    font-size: 20px;
+  }
+  button > b {
+    color: #b8ae15;
+    font-size: 20px;
+  }
+  hr {
+    margin: 0;
+    border: 1px solid #beac4a;
+  }
+  ul > li {
+    color: #aaba0c;
+  }
 }
+@media (min-width: 1200px) and (max-width: 1491.8px) {
+  nav {
+    top: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 80px;
+    background-image: url(./img/sky-828648.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: fixed;
+    width: 100%;
+  }
 
-@media (min-width: 1200px) {
+  .divNavContainer {
+    background-image: url(./img/sky-828648.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top: 80px;
+    width: 20vw;
+    left:0;
+    height: 75vw;
+    overflow-y:auto;
+    text-align: center;
+  }
+  .divNavContainer > ul,
+  li > ul {
+    list-style: none;
+    margin: 0.4vw;
+    padding: 0;
+  }
+
+  .divNavContainer > ul {
+    padding: 0px;
+    margin: 1vw 0;
+  }
+
+  .hamburguer > img {
+    display: none;
+  }
+  .logo > img {
+    width: 419px;
+    height: 51px;
+    padding-top: 7px;
+  }
+  .chat > img {
+    display: none;
+  }
+  .dropDownLi {
+    display: flex;
+    flex-direction: column;
+  }
+  .dropDownLi > ul {
+    display: block;
+  }
+  .oro:hover {
+    color: rgb(206, 149, 4);
+  }
+
+  li > button{
+    background: transparent;
+    border: none !important;
+    outline: none;
+    padding: 0.3vw 0 0.3vw 0;
+    pointer-events: none;
+  }
+  ul > li {
+    font-style: oblique;
+    font-size: 20px;
+  }
+  button > b {
+    color: #b8ae15;
+    font-size: 20px;
+  }
+  hr {
+    margin: 0;
+    border: 1px solid #beac4a;
+  }
+  ul > li {
+    color: #aaba0c;
+  }
+}
+@media (min-width: 1492px) {
+  nav {
+    top: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 80px;
+    background-image: url(./img/sky-828648.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: fixed;
+    width: 100%;
+  }
+
+  .divNavContainer {
+    background-image: url(./img/sky-828648.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top: 80px;
+    width: 17vw;
+    left:0;
+    height: 75vw;
+    overflow-y:auto;
+    text-align: center;
+  }
+  .divNavContainer > ul,
+  li > ul {
+    list-style: none;
+    margin: 0.4vw;
+    padding: 0;
+  }
+
+  .divNavContainer > ul {
+    padding: 0px;
+    margin: 1vw 0;
+  }
+
+  .hamburguer > img {
+    display: none;
+  }
+  .logo > img {
+    width: 419px;
+    height: 51px;
+    padding-top: 7px;
+  }
+  .chat > img {
+    display: none;
+  }
+  .dropDownLi {
+    display: flex;
+    flex-direction: column;
+  }
+  .dropDownLi > ul {
+    display: block;
+  }
+  .oro:hover {
+    color: rgb(206, 149, 4);
+  }
+
+  li > button{
+    background: transparent;
+    border: none !important;
+    outline: none;
+    padding: 0.3vw 0 0.3vw 0;
+    pointer-events: none;
+  }
+  ul > li {
+    font-style: oblique;
+    font-size: 20px;
+  }
+  button > b {
+    color: #b8ae15;
+    font-size: 20px;
+  }
+  hr {
+    margin: 0;
+    border: 1px solid #beac4a;
+  }
+  ul > li {
+    color: #aaba0c;
+  }
 }
