--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ ul > li {
     justify-content: space-around;
     align-items: center;
     height: 63px;
-    background-image: url(./img/sky-828648.jpg);
+    background-image: url(./img/sky.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -38,7 +38,7 @@ ul > li {
   }
 
   .divNavContainer {
-    background-image: url(./img/sky-828648.jpg);
+    background-image: url(./img/sky.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
@@ -94,7 +94,7 @@ ul > li {
     justify-content: space-around;
     align-items: center;
     height: 63px;
-    background-image: url(./img/sky-828648.jpg);
+    background-image: url(./img/sky.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -102,7 +102,7 @@ ul > li {
     width: 100%;
   }
   .divNavContainer {
-    background-image: url(./img/sky-828648.jpg);
+    background-image: url(./img/sky.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
@@ -161,7 +161,7 @@ ul > li {
     justify-content: space-around;
     align-items: center;
     height: 80px;
-    background-image: url(./img/sky-828648.jpg);
+    background-image: url(./img/sky.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -170,7 +170,7 @@ ul > li {
   }
 
   .divNavContainer {
-    background-image: url(./img/sky-828648.jpg);
+    background-image: url(./img/sky.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
@@ -219,10 +219,6 @@ ul > li {
     color: #b8ae15;
     font-size: 20px;
   }
-  .dropDownLi>img{
-    width:200px;
-    height:200px;
-  }
 }
 @media (min-width: 992px) and (max-width: 1199.8px) {
   nav {
@@ -231,7 +227,7 @@ ul > li {
     justify-content: space-around;
     align-items: center;
     height: 80px;
-    background-image: url(./img/sky-828648.jpg);
+    background-image: url(./img/sky.webp);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -240,7 +236,7 @@ ul > li {
   }
 
   .divNavContainer {
-    background-image: url(./img/sky-828648.jpg);
+    background-image: url(./img/sky.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -285,10 +281,6 @@ ul > li {
     color: #b8ae15;
     font-size: 20px;
   }
-  .dropDownLi>img{
-    width:200px;
-    height:200px;
-  }
 }
 @media (min-width: 1200px) and (max-width: 1491.8px) {
   nav {
@@ -297,7 +289,7 @@ ul > li {
     justify-content: space-around;
     align-items: center;
     height: 80px;
-    background-image: url(./img/sky-828648.jpg);
+    background-image: url(./img/sky.webp);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -306,7 +298,7 @@ ul > li {
   }
 
   .divNavContainer {
-    background-image: url(./img/sky-828648.jpg);
+    background-image: url(./img/sky.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -351,10 +343,6 @@ ul > li {
     color: #b8ae15;
     font-size: 20px;
   }
-  .dropDownLi>img{
-    width:200px;
-    height:200px;
-  }
 }
 @media (min-width: 1492px) {
   nav {
@@ -363,7 +351,7 @@ ul > li {
     justify-content: space-around;
     align-items: center;
     height: 80px;
-    background-image: url(./img/sky-828648.jpg);
+    background-image: url(./img/sky.webp);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -372,7 +360,7 @@ ul > li {
   }
 
   .divNavContainer {
-    background-image: url(./img/sky-828648.jpg);
+    background-image: url(./img/sky.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -420,9 +408,5 @@ ul > li {
   button > b {
     color: #b8ae15;
     font-size: 20px;
-  }
-  .dropDownLi>img{
-    width:200px;
-    height:200px;
   }
 }
