--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ ul > li {
     justify-content: space-around;
     align-items: center;
     height: 63px;
-    background-image: url(./img/sky.webp);
+    background-image: url(./img/sky-828648_1920.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -38,7 +38,7 @@ ul > li {
   }
 
   .divNavContainer {
-    background-image: url(./img/sky.webp);
+    background-image: url(./img/sky-828648_1920.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
@@ -94,7 +94,7 @@ ul > li {
     justify-content: space-around;
     align-items: center;
     height: 63px;
-    background-image: url(./img/sky.webp);
+    background-image: url(./img/sky-828648_1920.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -102,7 +102,7 @@ ul > li {
     width: 100%;
   }
   .divNavContainer {
-    background-image: url(./img/sky.webp);
+    background-image: url(./img/sky-828648_1920.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
@@ -161,7 +161,7 @@ ul > li {
     justify-content: space-around;
     align-items: center;
     height: 80px;
-    background-image: url(./img/sky.webp);
+    background-image: url(./img/sky-828648_1920.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -170,7 +170,7 @@ ul > li {
   }
 
   .divNavContainer {
-    background-image: url(./img/sky.webp);
+    background-image: url(./img/sky-828648_1920.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
@@ -227,7 +227,7 @@ ul > li {
     justify-content: space-around;
     align-items: center;
     height: 80px;
-    background-image: url(./img/sky.webp);
+    background-image: url(./img/sky-828648_1920.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -236,7 +236,7 @@ ul > li {
   }
 
   .divNavContainer {
-    background-image: url(./img/sky.webp);
+    background-image: url(./img/sky-828648_1920.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -289,7 +289,7 @@ ul > li {
     justify-content: space-around;
     align-items: center;
     height: 80px;
-    background-image: url(./img/sky.webp);
+    background-image: url(./img/sky-828648_1920.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -298,7 +298,7 @@ ul > li {
   }
 
   .divNavContainer {
-    background-image: url(./img/sky.webp);
+    background-image: url(./img/sky-828648_1920.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -351,7 +351,7 @@ ul > li {
     justify-content: space-around;
     align-items: center;
     height: 80px;
-    background-image: url(./img/sky.webp);
+    background-image: url(./img/sky-828648_1920.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -360,7 +360,7 @@ ul > li {
   }
 
   .divNavContainer {
-    background-image: url(./img/sky.webp);
+    background-image: url(./img/sky-828648_1920.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
